--- a/source/style/_misc/fonts.scss
+++ b/source/style/_misc/fonts.scss
@@ -1,93 +1,83 @@
 @font-face {
-    font-family: 'robotobold';
-    src: url('../fonts/roboto-bold-webfont.eot');
-    src: url('../fonts/roboto-bold-webfont.eot?#iefix') format('embedded-opentype'),url('../fonts/roboto-bold-webfont.woff2') format('woff2'), url('../fonts/roboto-bold-webfont.woff') format('woff'), url('../fonts/roboto-bold-webfont.ttf') format('truetype'), url('../fonts/roboto-bold-webfont.svg#robotobold') format('svg');
+    font-family: 'roboto_bold';
+    src: url('../fonts/roboto-bold-webfont.woff2') format('woff2'), url('../fonts/roboto-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotolight';
-    src: url('../fonts/roboto-light-webfont.eot');
-    src: url('../fonts/roboto-light-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto-light-webfont.woff2') format('woff2'), url('../fonts/roboto-light-webfont.woff') format('woff'), url('../fonts/roboto-light-webfont.ttf') format('truetype'), url('../fonts/roboto-light-webfont.svg#robotolight') format('svg');
+    font-family: 'roboto_light';
+    src: url('../fonts/roboto-light-webfont.woff2') format('woff2'), url('../fonts/roboto-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotomedium';
-    src: url('../fonts/roboto-medium-webfont.eot');
-    src: url('../fonts/roboto-medium-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto-medium-webfont.woff2') format('woff2'), url('../fonts/roboto-medium-webfont.woff') format('woff'), url('../fonts/roboto-medium-webfont.ttf') format('truetype'), url('../fonts/roboto-medium-webfont.svg#robotomedium') format('svg');
+    font-family: 'roboto_medium';
+    src: url('../fonts/roboto-medium-webfont.woff2') format('woff2'), url('../fonts/roboto-medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotoregular';
-    src: url('../fonts/roboto-regular-webfont.eot');
-    src: url('../fonts/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto-regular-webfont.woff2') format('woff2'), url('../fonts/roboto-regular-webfont.woff') format('woff'), url('../fonts/roboto-regular-webfont.ttf') format('truetype'), url('../fonts/roboto-regular-webfont.svg#robotoregular') format('svg');
+    font-family: 'roboto_regular';
+    src: url('../fonts/roboto-regular-webfont.woff2') format('woff2'), url('../fonts/roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotobold_italic';
-    src: url('../fonts/roboto-bolditalic-webfont.eot');
-    src: url('../fonts/roboto-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto-bolditalic-webfont.woff2') format('woff2'), url('../fonts/roboto-bolditalic-webfont.woff') format('woff'), url('../fonts/roboto-bolditalic-webfont.ttf') format('truetype'), url('../fonts/roboto-bolditalic-webfont.svg#robotobold_italic') format('svg');
+    font-family: 'roboto_bolditalic';
+    src: url('../fonts/roboto-bolditalic-webfont.woff2') format('woff2'), url('../fonts/roboto-bolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotoitalic';
-    src: url('../fonts/roboto-italic-webfont.eot');
-    src: url('../fonts/roboto-italic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto-italic-webfont.woff2') format('woff2'), url('../fonts/roboto-italic-webfont.woff') format('woff'), url('../fonts/roboto-italic-webfont.ttf') format('truetype'), url('../fonts/roboto-italic-webfont.svg#robotoitalic') format('svg');
+    font-family: 'roboto_lightitalic';
+    src: url('../fonts/roboto-lightitalic-webfont.woff2') format('woff2'), url('../fonts/roboto-lightitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotolight_italic';
-    src: url('../fonts/roboto-lightitalic-webfont.eot');
-    src: url('../fonts/roboto-lightitalic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto-lightitalic-webfont.woff2') format('woff2'), url('../fonts/roboto-lightitalic-webfont.woff') format('woff'), url('../fonts/roboto-lightitalic-webfont.ttf') format('truetype'), url('../fonts/roboto-lightitalic-webfont.svg#robotolight_italic') format('svg');
+    font-family: 'roboto_mediumitalic';
+    src: url('../fonts/roboto-mediumitalic-webfont.woff2') format('woff2'), url('../fonts/roboto-mediumitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'robotomedium_italic';
-    src: url('../fonts/roboto-mediumitalic-webfont.eot');
-    src: url('../fonts/roboto-mediumitalic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto-mediumitalic-webfont.woff2') format('woff2'), url('../fonts/roboto-mediumitalic-webfont.woff') format('woff'), url('../fonts/roboto-mediumitalic-webfont.ttf') format('truetype'), url('../fonts/roboto-mediumitalic-webfont.svg#robotomedium_italic') format('svg');
+    font-family: 'roboto_italic';
+    src: url('../fonts/roboto-italic-webfont.woff2') format('woff2'), url('../fonts/roboto-italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @mixin roboto($style: regular) {
-    font-family: 'robotoregular';
+    font-family: 'roboto_regular', serif;
 
     @if $style == bold {
-        font-family: 'robotobold';
+        font-family: 'roboto_bold', serif;
     }
 
     @if $style == light {
-        font-family: 'robotolight';
+        font-family: 'roboto_light', serif;
     }
 
     @if $style == medium {
-        font-family: 'robotomedium';
+        font-family: 'roboto_medium', serif;
     }
-    @if $style == regularit {
-        font-family: 'robotoitalic';
+    @if $style == bolditalic {
+        font-family: 'roboto_bolditalic', serif;
     }
-    @if $style == boldit {
-        font-family: 'robotobold_italic';
+    @if $style == lightitalic {
+        font-family: 'roboto_lightitalic', serif;
     }
-
-    @if $style == lightit {
-        font-family: 'robotolight_italic';
+    @if $style == mediumitalic {
+        font-family: 'roboto_mediumitalic', serif;
     }
-
-    @if $style == mediumit {
-        font-family: 'robotomedium_italic';
+    @if $style == italic {
+        font-family: 'roboto_italic', serif;
     }
 }
