--- a/source/style/_misc/adjustment.scss
+++ b/source/style/_misc/adjustment.scss
@@ -1,75 +1,70 @@
 html {
-  font-size: 16px;
-
-  @include desktop {
     font-size: 16px;
-  }
+    height: 100%;
+    @include desktop {
+        font-size: 16px;
+    }
 
-  @include laptop {
-    font-size: 15px;
-  }
+    @include laptop {
+        font-size: 15px;
+    }
 
-  @include tablets {
-    font-size: 14px;
-  }
+    @include tablets {
+        font-size: 14px;
+    }
 
-  @include phones {
-    font-size: 13px;
-  }
-}
-
-html {
-  width: 100%;
-  height: 100%;
+    @include phones {
+        font-size: 13px;
+    }
 }
 
 body {
-  font-family: $body-font;
-  line-height: 1.42;
-  -webkit-font-smoothing: antialiased;
-  width: 100%;
-  height: 100%;
+    font-family: 'roboto_regular', Helvetica, serif;
+    line-height: 1.42;
+    -webkit-font-smoothing: antialiased !important;
+    min-height: 100%;
+    min-width: 320px;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 li {
-  list-style:none;
+    list-style: none;
 }
+
 ul {
-  margin: 0;
-  padding: 0;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 p {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  font-weight: normal;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: normal;
 }
 
-.wrapper {
-  height: 100%;
-  display: flex;
-  flex-direction: column; 
-  margin: 0 auto;
-  min-width: 100%;
+.wrap {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    position: relative;
 }
 
 .footer,
 .header {
-  flex: 0 0 auto;
+    flex: 0 0 auto;
 }
 
-.maincontent {
-  flex: 1 0 auto;
-  padding-bottom: 50px;
-}
-
-.svgicon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  fill: currentColor;
-  vertical-align:middle;
+.main {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
 }
