--- a/source/template/pages/index.html
+++ b/source/template/pages/index.html
@@ -25,8 +25,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/assets/css/foundation.min.css?rel=0.0.1">
-    <link rel="stylesheet" href="/assets/css/app.min.css?rel=0.0.1">
+    <link rel="stylesheet" href="/assets/css/foundation.min.css">
+    <link rel="stylesheet" href="/assets/css/app.min.css">
 </head>
 	<body>
 		<div class="wrapper">
@@ -38,7 +38,7 @@
 			<footer class="footer">
 			</footer>
 		</div>
-		<script src="/assets/js/foundation.min.js?rel=0.0.1" defer></script>
-    	<script src="/assets/js/app.min.js?rel=0.0.1" defer></script>
+		<script src="/assets/js/foundation.min.js" defer></script>
+    	<script src="/assets/js/app.min.js" defer></script>
 	</body>
 </html>
