--- a/source/template/partials/_scripts.pug
+++ b/source/template/partials/_scripts.pug
@@ -1,2 +1,2 @@
-script(src="/assets/js/foundation.min.js%=version=%" defer)
-script(src="/assets/js/app.min.js%=version=%" defer)
+script(src="./assets/js/foundation%=suffix=%.js%=version=%" defer)
+script(src="./assets/js/app%=suffix=%.js%=version=%" defer)
