rename main block

--- a/source/style/_misc/adjustment.scss
+++ b/source/style/_misc/adjustment.scss
@@ -63,7 +63,7 @@ h1, h2, h3, h4, h5, h6 {
     flex: 0 0 auto;
 }
 
-.main {
+.main-container {
     flex: 1 0 auto;
     display: flex;
     flex-direction: column;
